WIP: needs testing

--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -6,7 +6,7 @@
     Layout = "_ClubLayout";
 }
 
-<div class="container p-0 justify-content-between">
+<div class="container p-0 justify-content-between mb-4">
     <h4>Add a new race@(Model.Regatta != null ? " for " + Model.Regatta.Name : "")</h4>
     <hr />
     @if (Model.Tips != null && Model.Tips.Count != 0)
