--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -319,6 +319,13 @@
         </div>
     </form>
     <hr />
+
+    <!--These empty divs are here to allow the page to scroll up enough so that create buttons are visible when scoreentry buttons take up 45%
+        of screen.
+    -->
+    <div class="container mb-5 mb-sm-0">&nbsp;</div>
+
+    <div class="container mb-5">&nbsp;</div>
 </div>
 
 <div class="modal fade" id="deleteConfirm" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmLabel" aria-hidden="true">
