Canceling a race delete returns to race page
and "more" button formatting.

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -9,8 +9,8 @@
     <p>
         SailScores makes publishing sail race results simple and
         fast: simple enough that the scores can be entered and shared
-        from a phone on the water. Competitors and clubs should be able to view scores
-        in many ways from many devices, and see trends and specifics.
+        from a phone on the water. Competitors and clubs can view scores
+        in many ways from many devices, with trends and specifics.
     </p>
     <br />
     <h3>It's free</h3>
@@ -20,10 +20,9 @@
         for the initial club setup.
     </p>
     <p>
-        If you'd rather provide your own servers, SailScores is open-source software. The
-        code is available at
+        SailScores is open-source software. The code is available at
         <a href="https://github.com/SailScores/SailScores">https://github.com/SailScores/SailScores</a>.
-        You are welcome to run your own instance of this. We'll provide
+        You are welcome to run your own instance of this. (Not for the feint of heart...) We'll provide
         support as time allows.
     </p>
     <br />
@@ -52,6 +51,7 @@
     <h3>Future</h3>
     We're working on new features, including:
     <ul>
+        <li>Always improving the score entry experience.</li>
         <li>Additional analysis for competitors in different conditions.</li>
         <li>Continuing to add more import and export options to integrate with other scoring software.</li>
         <li>Deeper trend reporting for clubs: What's the average wind for your club's races?</li>
