--- a/SailScores.Web/custom.scss
+++ b/SailScores.Web/custom.scss
@@ -164,6 +164,10 @@ button.close {
     font-size: 2rem;
 }
 
+button.quick-comp {
+    margin: 3px;
+}
+
 svg text {
     font-family: "Open Sans", "Segoe UI", sans-serif;
 }
