--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <small>
-                        &copy; 2024 - J. Fraser &ndash;
+                        &copy; 2018&ndash;2025 &ndash; J. Fraser &ndash;
                         <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a>
                     </small>
                 </div>
