Preview likely race number on race creation
API endpoint to send race number
Closes SailScores#347

--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -53,6 +53,10 @@
                 <input id="date" asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
+            <labelclass ="col-2 col-form-label">Default order:</labelclass>
+            <div class="col-md-4 col-12">
+                <span class="h4" id="raceNumber"></span>
+            </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
