--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="container p-0 justify-content-between">
-    <h4>Update a race</h4>
+    <h4>Update race</h4>
     <hr />
     <form id="raceform" asp-action="Edit"
           asp-route-returnurl="@ViewData["ReturnUrl"]">
