WIP: check for Url validity

--- a/SailScores.Web/Views/Competitor/Index.cshtml
+++ b/SailScores.Web/Views/Competitor/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@using SailScores.Web.Models.SailScores;
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.Extensions.Localization
 @using SailScores.Core.Services
-@using SailScores.Web.Services
+@using SailScores.Core.Utility
+@using SailScores.Web.Models.SailScores;
 @using SailScores.Web.Resources
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using SailScores.Web.Services
 
 @inject IStringLocalizer<SharedResource> localizer
 @inject AppSettingsService settingsService
