--- a/SailScores.Web/Views/Admin/Edit.cshtml
+++ b/SailScores.Web/Views/Admin/Edit.cshtml
@@ -70,6 +70,7 @@
                             class="form-control col-6"
                             type="text" pattern="[0-9]+([\.,][0-9]+)?" />
                     <span asp-validation-for="Latitude" class="text-danger"></span>
+                        <small id="emailHelp" class="form-text text-muted">Positive numbers are Northern Hemisphere.</small>
                 </div>
             </div>
             <div class="form-group col-sm-6">
@@ -80,6 +81,8 @@
                             class="form-control col-6"
                             type="text" pattern="[0-9]+([\.,][0-9]+)?" />
                     <span asp-validation-for="Longitude" class="text-danger"></span>
+
+                        <small id="emailHelp" class="form-text text-muted">Negative for Western Hemisphere (including U.S.)</small>
                 </div>
             </div>
         </div>
@@ -87,7 +90,7 @@
             <div class="form-group col-sm-6">
                 <div class="form-row">
                     <label class="col-6 col-form-label control-label"
-                            asp-for="SpeedUnits">Speed Units</label>
+                            asp-for="SpeedUnits">Wind Speed Units</label>
                     <select id="speedUnits" asp-for="SpeedUnits"
                             class="form-control col-6"
                             asp-items="new SelectList(Model.SpeedUnitOptions)"></select>
