Updates rules and adds admin tweak

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
         <ul>
             <li>Fast, simple result entry and sharing using the web. Optional speech
                 recognition to make things really easy.</li>
-            <li>Support for Appendix A Low Point Scoring including 2021-2024 codes,
+            <li>Support for Appendix A Low Point Scoring including 2025-2028 rounding rules,
                 High Point Percentage, Cox-Sprague, and customized club scoring codes.
             </li>
             <li>Easy to bookmark and link to club, series, and regatta results.</li>
