--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -11,7 +11,7 @@
 <h3>Edit Series Properties</h3>
 <hr />
 <div class="row">
-    <div class="col-xl-4 col-lg-6 col-md-8">
+    <div class="col-lg-6 col-md-8">
         <form asp-action="Edit"
               asp-route-returnurl="@ViewData["ReturnUrl"]" >
             <input type="hidden" asp-for="Id" />
